k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: soc-portal
  labels:
    name: soc-portal
